tests/invalid_loop/test_uv_tcp.php
<?php
$class = 'UVTcp';
require __DIR__ . '/../../test-tools.php';
require __DIR__ . '/error_handler.php';
$tcp = new UVTcp(new stdClass());
